--- a/segmentação/segmenta_clustering.ipynb
+++ b/segmentação/segmenta_clustering.ipynb
@@ -1900,7 +1900,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "face",
+   "display_name": "tevc",
    "language": "python",
    "name": "python3"
   },
@@ -1914,11 +1914,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2da4500b2e5ce8a36153239c1d0b22688777ed7c643e642d822b7c7e531ef1c0"
+    "hash": "59700c8d1a33eddc98a4292e5d0faa77f8b7f39010e074f2a189ee9a5d21e430"
    }
   }
  },
