--- a/sistema_de_visao.ipynb
+++ b/sistema_de_visao.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lista os arquivos do diretorio.\n",
-    "tumor_paths = glob.glob()\n",
-    "no_tumor_paths = glob.glob()"
+    "tumor_paths = glob.glob('imagens/*.jpg')\n",
+    "no_tumor_paths = glob.glob('imagens/*.jpg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ler as imagens e faz o corte.\n",
+    "imgs_tumor = [imread(i) for i in tumor_paths]\n",
+    "imgs_tumor_crop = [crop_image(img) for img in imgs_tumor]\n"
    ]
   },
   {
@@ -80,8 +91,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgs_tumor = [imread(i) for i in tumor_paths]\n",
-    "imgs_tumor_crop = [crop_image(img) for img in imgs_tumor]"
+    "imgs_no_tumor = [imread(i) for i in no_tumor_paths]\n",
+    "imgs_no_tumor_crop = [crop_image(img) for img in imgs_no_tumor]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_crop(imgs, path):\n",
+    "    \n",
+    "    for i in range(len(imgs)):\n",
+    "        imsave(path+str(i)+'.jpg', imgs[i])\n",
+    "    \n",
+    "    return 1\n"
    ]
   }
  ],
