--- a/filtros.ipynb
+++ b/filtros.ipynb
@@ -669,7 +669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "face",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -683,12 +683,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2da4500b2e5ce8a36153239c1d0b22688777ed7c643e642d822b7c7e531ef1c0"
+    "hash": "33fb81b30dbad5efdfd8e59d2eb6c9bb746a620a6b7a6df18f82036835af372d"
    }
   }
  },
