--- a/sistema_de_visao.ipynb
+++ b/sistema_de_visao.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "from skimage.exposure import histogram, equalize_hist\n",
     "from skimage.filters import threshold_otsu, threshold_niblack\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import KMeans, DBSCAN\n",
     "from sklearn.neighbors import KNeighborsClassifier\n"
    ]
   },
