--- a/extrator_segunda_ordem/sistema_de_visao.ipynb
+++ b/extrator_segunda_ordem/sistema_de_visao.ipynb
@@ -625,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -639,12 +639,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "635f8ece88df2cbcb7ebabf7c8b83da5a28593d39d0c8ebf47aa10980f0389ad"
+    "hash": "33fb81b30dbad5efdfd8e59d2eb6c9bb746a620a6b7a6df18f82036835af372d"
    }
   }
  },
